services.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: postgres
  ports:
    - name: postgres-port
      port: 5432
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    app: mongo
  ports:
    - name: mongo-port
      port: 27017
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: NodePort
  ports:
    - name: http
      targetPort: 30000
      port: 30000
      # nodePort: 30000
  selector:
    app: backend

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend # le label du pod
  ports:
    - name: http
      protocol: TCP
      targetPort: 80 # du container
      port: 80 # interne au cluster (les autres services peuvent s'y connecter)
      # nodePort: 80 # exposé en l'extérieur du cluster
  type: NodePort
